# kryon

./: --debug  .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  AndroidManifest.xml  CANVAS.md  CHANGELOG.md  CLAUDE.md  CLI_INTEGRATION_STATUS.md  CLI_MULTI_FRONTEND.md  CMakeLists.txt  CODEGEN_STATUS.md  Cargo.toml  DEVELOPMENT.md  DIS_VM_COMPLETE_REFERENCE.md  EXECUTION_FLOW.md  IMPLEMENTATION_ROADMAP.md  INFERNO_PLUGIN_STATUS.md  INSTALLATION.md  KRY_FEATURE_SUPPORT_PLAN.md  LAYOUT_MIGRATION_GUIDE.md  LAYOUT_SYSTEM_ROADMAP.md  LICENSE  LINK_IMPLEMENTATION.md  MARKDOWN.md  MIGRATION.md  MainActivity.kt  Makefile  Makefile.backup  Makefile.bak  Makefile.inferno  Makefile.taijios  NEXT_STEPS.md  PERFORMANCE_OPTIMIZATIONS.md  PLAN9_REMAINING.md  PROJECT_STRUCTURE.md  (+91 more)
bindings/python/: IMPLEMENTATION_SUMMARY.md  Makefile  README.md  build.py  pyproject.toml
bindings/rust/: Cargo.toml  README.md
crates/kryon-html/: Cargo.toml
crates/kryon-sdl2/: Cargo.toml
crates/kryon-shared/: Cargo.toml
ir/: CLAUDE.md  CMakeLists.txt  Makefile  Makefile.gen  PHASE4_SUMMARY.md  ir_animation.c  ir_animation.h  ir_animation_builder.c  ir_animation_builder.h  ir_assert.h  ir_asset.c  ir_asset.h  ir_audio.c  ir_audio.h  ir_audio_decoder.c  ir_audio_decoder.h  ir_audio_mixer.c  ir_audio_mixer.h  ir_bidi_stub.c  ir_buffer.c  ir_buffer.h  ir_builder.c  ir_builder.h  ir_builtin_registry.c  ir_c_metadata.h  ir_capability.c  ir_capability.h  ir_color_utils.c  ir_component_factory.c  ir_component_factory.h  ir_component_handler.c  ir_component_handler.h  ir_component_types.c  ir_component_types.h  ir_constants.h  ir_core.h  ir_css_parser.c  ir_css_parser.h  ir_debug.h  ir_entity.c  (+127 more)
ir/codegens/: ir_c_codegen.c  ir_c_codegen.h
ir/components/: ir_component_button.c  ir_component_button.h  ir_component_canvas.c  ir_component_canvas.h  ir_component_checkbox.c  ir_component_checkbox.h  ir_component_dropdown.c  ir_component_dropdown.h  ir_component_flexbox.c  ir_component_flexbox.h  ir_component_image.c  ir_component_image.h  ir_component_input.c  ir_component_input.h  ir_component_misc.c  ir_component_misc.h  ir_component_modal.c  ir_component_modal.h  ir_component_registry.c  ir_component_registry.h  ir_component_table.c  ir_component_table.h  ir_component_tabs.c  ir_component_tabs.h  ir_component_text.c  ir_component_text.h
ir/include/: ir.h  ir_builder.h  ir_capability.h  ir_component_handler.h  ir_core.h  ir_events.h  ir_expression.h  ir_gradient.h  ir_layout.h  ir_lifecycle_hooks.h  ir_logic.h  ir_markdown.h  ir_module_refs.h  ir_native_canvas.h  ir_platform.h  ir_properties.h  ir_property_registry.h  ir_reactive_runtime.h  ir_serialization.h  ir_state.h  ir_style_builder.h  ir_table.h  ir_text_shaping.h  ir_transition.h  ir_types.h  parser_interface.h
ir/layout/: ir_layout_strategy.c  ir_layout_strategy.h  strategy_canvas.c  strategy_column.c  strategy_container.c  strategy_foreach.c  strategy_image.c  strategy_row.c  strategy_text.c
ir/parsers/: parser_utils.c  parser_utils.h  stubs.c
ir/spec/: generate_serialization.py  ir_nodes.json  ir_nodes.yaml
ir/src/: ir_builder.c  parser_interface.c
ir/test/: test_ir_buffer.c  test_ir_event_types.c  test_ir_json_helpers.c  test_ir_layout_types.c  test_ir_properties.c  test_ir_string_builder.c  test_ir_style_types.c
ir/tests/: Makefile  test_buffer.c  test_framework.h  test_serialization_roundtrip.c
renderers/android/: CMakeLists.txt  Makefile  android_egl.c  android_font.c  android_primitives.c  android_renderer.c  android_renderer.h  android_renderer_internal.h  android_shaders.c  android_shaders.h  android_texture.c
runtime/android/: CMakeLists.txt  Makefile  android_internal.h  android_layout.c  android_rendering.c  ir_android_renderer.c  ir_android_renderer.h
src/audio/: CMakeLists.txt
src/cli/: CMakeLists.txt  cli.h  commands.c  compile_command.c  compile_command_kir_integration.patch  debug_command.c  decompile_command.c  dev_command.c  emu_command.c  kir_commands.c  kryon.nim  main.c  main.c.bak  package_command.c  print_command.c  run_command.c  targets_command.c  yaml.c
src/compiler/: CMakeLists.txt  mod.rs  module_loader.c  module_resolver.c
src/core/: 9p.c  CMakeLists.txt  app_host.c  app_runtime.c  arena.c  auth_dp9ik.c  auth_p9any.c  auth_p9sk1.c  binary_io.c  color_utils.c  containers.c  cpu_server.c  cpu_server.h  devcons.c  devdraw.c  devenv.c  devfactotum.c  devkbd.c  devmouse.c  devproc.c  devscreen.c  embedded_assets.c  error_system.c  events.c  flint_app.c  layout.c  locale.c  memdraw.c  memory_manager.c  namespace.c  namespace.h  ops.c  properties.rs  rcpu.c  render.c  secstore.c  state.rs  target_resolver.c  theme.c  theme_meta.c  (+6 more)
src/elements/: CMakeLists.txt
src/events/: CMakeLists.txt  events.c
src/filesystem/: CMakeLists.txt
src/graphics/: CMakeLists.txt  color_utils.c  graphics_core.c
src/layout/: CMakeLists.txt  element_layout.c  element_system.c  element_transform.c  widget_renderer.c  widget_system.c
src/network/: CMakeLists.txt
src/platform/: CMakeLists.txt  platform.c  platform_thread.c
src/renderers/: CMakeLists.txt  render_system.c
src/runtime/: CMakeLists.txt  behavior_integration.c  element_behaviors.c  elements.c  expression_evaluator.c  limbo_builtin.c
src/script-engines/: vm_core.c  (+1 more)
tests/: CMakeLists.txt  Cargo.toml  Makefile  README.md  README_TEST_SUITE.md  TESTING_GUIDE.md  TESTING_MASTER_PLAN.md  TESTING_README.md  TESTING_SUMMARY.md  element_system_test.c  file_dialog_backend_test.c  graphical_test  graphical_test.c  kc_syntax_test.sh  lyra_account_test.c  lyra_sync_test.c  markdown_test.c  platform_thread_test.c  preview_test.c  raylib_compat_test.c  run_comprehensive_tests.sh  run_tests.sh  simple_render_test  simple_render_test.c  test-config.toml  test-runner.toml  test_9p_server.c  test_all  test_all.nim  test_auto_height.c  test_bidi.c  test_bidi_simple.c  test_config.toml  test_display.c  test_file_watcher.c  test_for_compilation.sh  test_integration.sh  test_namespace.c  transition_test.c  ui_tk_test.c  (+1 more)
(+2300 files in other folders)
