[workspace]
resolver = "2"
members = [
    "crates/kryon-shared",
    "crates/kryon-compiler", 
    "crates/kryon-core",
    "crates/kryon-runtime",
    "crates/kryon-layout",
    "crates/kryon-render",
    "crates/kryon-raylib",
    "crates/kryon-ratatui", 
    "crates/kryon-wgpu",
    "crates/kryon-html",
    "crates/kryon-web",
    "tools/kryc",
    "examples/tests"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kryon Labs"]
license = "0BSD"
repository = "https://github.com/kryonlabs/kryon"

[workspace.dependencies]
# Core shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
glam = "0.25"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
log = "0.4"
env_logger = "0.10"
bitflags = "2.5"

# Compiler dependencies
byteorder = "1.5"
regex = "1.10"
meval = "0.2"
notify = "6.0"
walkdir = "2.4"
hex = "0.4"
md5 = "0.7"
flate2 = "1.0"
toml = "0.8"
mlua = { version = "0.9", features = ["lua54", "vendored"] }

# Renderer dependencies
wgpu = "0.19"
winit = "0.29"
ratatui = "0.26"
crossterm = "0.27"
raylib = "5.0"
cosmic-text = "0.13"
pollster = "0.3"
tokio = { version = "1.0", features = ["full"] }
bytemuck = { version = "1.14", features = ["derive"] }

# Development dependencies
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

# Kryon internal dependencies
kryon-shared = { path = "crates/kryon-shared" }
kryon-compiler = { path = "crates/kryon-compiler" }
kryon-renderer = { path = "crates/kryon-renderer" }
kryon-runtime = { path = "crates/kryon-runtime" }
kryon-layout = { path = "crates/kryon-layout" }
kryon-render = { path = "crates/kryon-render" }
kryon-raylib = { path = "crates/kryon-raylib" }
kryon-ratatui = { path = "crates/kryon-ratatui" }
kryon-wgpu = { path = "crates/kryon-wgpu" }
kryon-html = { path = "crates/kryon-html" }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true

# Package section for binaries
[package]
name = "kryon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace crates
kryon-shared = { path = "crates/kryon-shared" }
kryon-core = { path = "crates/kryon-core" }
kryon-runtime = { path = "crates/kryon-runtime" }
kryon-layout = { path = "crates/kryon-layout" }
kryon-render = { path = "crates/kryon-render" }
kryon-raylib = { path = "crates/kryon-raylib" }
kryon-ratatui = { path = "crates/kryon-ratatui" }
kryon-wgpu = { path = "crates/kryon-wgpu" }
kryon-html = { path = "crates/kryon-html" }
kryon-compiler = { path = "crates/kryon-compiler" }

# CLI dependencies
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "kryon-renderer-raylib"
path = "src/bin/kryon-renderer-raylib.rs"

[[bin]]
name = "kryon-renderer-ratatui"
path = "src/bin/kryon-renderer-ratatui.rs"

[[bin]]
name = "kryon-renderer-wgpu"
path = "src/bin/kryon-renderer-wgpu.rs"

[[bin]]
name = "kryon-renderer-debug"
path = "src/bin/kryon-renderer-debug.rs"
