[workspace]
resolver = "2"
members = [
    "crates/kryon-shared",
    "crates/kryon-compiler", 
    "crates/kryon-core",
    "crates/kryon-runtime",
    "crates/kryon-layout",
    "crates/kryon-render",
    "crates/kryon-raylib",
    "crates/kryon-ratatui", 
    "crates/kryon-wgpu",
    "crates/kryon-sdl2",
    "crates/kryon-html",
    "crates/kryon-web",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kryon Labs"]
license = "0BSD"
repository = "https://github.com/kryonlabs/kryon"

[workspace.dependencies]
# Core shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
glam = "0.25"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
log = "0.4"
env_logger = "0.10"
bitflags = "2.5"

# Compiler dependencies
byteorder = "1.5"
regex = "1.10"
meval = "0.2"
notify = "6.0"
walkdir = "2.4"
hex = "0.4"
md5 = "0.7"
flate2 = "1.0"
toml = "0.8"
mlua = { version = "0.9", features = ["lua54", "vendored"] }

# Renderer dependencies
wgpu = "0.19"
winit = "0.29"
ratatui = "0.26"
crossterm = "0.27"
raylib = "5.0"
sdl2 = { version = "0.37", features = ["ttf", "image", "gfx"] }
cosmic-text = "0.13"
pollster = "0.3"
tokio = { version = "1.0", features = ["full"] }
bytemuck = { version = "1.14", features = ["derive"] }
warp = "0.3"
uuid = { version = "1.0", features = ["v4"] }
html-escape = "0.2"

# Development dependencies
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1.34", features = ["yaml", "json"] }
colored = "2.0"
inquire = "0.7"
which = "6.0"

# Testing dependencies
assert_fs = "1.0"
predicates = "3.0"
proptest = "1.4"
futures = "0.3"
assert_matches = "1.5"
pretty_assertions = "1.4"
sha2 = "0.10"
rand = "0.8"
image = "0.24"
indexmap = "2.0"

# Kryon internal dependencies
kryon-shared = { path = "crates/kryon-shared" }
kryon-compiler = { path = "crates/kryon-compiler" }
kryon-core = { path = "crates/kryon-core" }
kryon-renderer = { path = "crates/kryon-renderer" }
kryon-runtime = { path = "crates/kryon-runtime" }
kryon-layout = { path = "crates/kryon-layout" }
kryon-render = { path = "crates/kryon-render" }
kryon-raylib = { path = "crates/kryon-raylib" }
kryon-ratatui = { path = "crates/kryon-ratatui" }
kryon-wgpu = { path = "crates/kryon-wgpu" }
kryon-sdl2 = { path = "crates/kryon-sdl2" }
kryon-html = { path = "crates/kryon-html", default-features = false }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true

# Package section for binaries
[package]
name = "kryon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies (shared by main CLI and renderer binaries)
kryon-core = { path = "crates/kryon-core" }
kryon-compiler = { path = "crates/kryon-compiler" }

# CLI dependencies
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
colored = "2.0"
inquire = "0.7"
which = "6.0"
walkdir = { workspace = true }

# Renderer-specific dependencies (only for individual renderer binaries)
kryon-raylib = { path = "crates/kryon-raylib", optional = true }
kryon-ratatui = { path = "crates/kryon-ratatui", optional = true }
kryon-wgpu = { path = "crates/kryon-wgpu", optional = true }
kryon-sdl2 = { path = "crates/kryon-sdl2", optional = true }
kryon-html = { path = "crates/kryon-html", optional = true, default-features = false }
kryon-runtime = { path = "crates/kryon-runtime", optional = true }
kryon-render = { path = "crates/kryon-render", optional = true }
kryon-layout = { path = "crates/kryon-layout", optional = true }

# Renderer feature dependencies
wgpu = { workspace = true, optional = true }
winit = { workspace = true, optional = true }
glam = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
ratatui = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
warp = { version = "0.3", optional = true }
uuid = { version = "1.0", optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = []

# Widget features - optional built-in widgets
basic-widgets = []
extended-widgets = ["dropdown", "data-grid", "date-picker", "rich-text"]
dropdown = []
data-grid = []
date-picker = []
rich-text = []
color-picker = []
file-upload = []
number-input = []
range-slider = []
all-widgets = ["extended-widgets", "color-picker", "file-upload", "number-input", "range-slider"]

# Renderer features (only enabled when building specific renderer binaries)
wgpu = ["dep:wgpu", "dep:winit", "dep:glam", "dep:pollster", "dep:kryon-wgpu", "dep:kryon-runtime", "dep:kryon-render", "dep:kryon-layout"]
ratatui = ["dep:ratatui", "dep:crossterm", "dep:glam", "dep:kryon-ratatui", "dep:kryon-runtime", "dep:kryon-render", "dep:kryon-layout"]
raylib = ["dep:kryon-raylib", "dep:kryon-runtime", "dep:kryon-render", "dep:kryon-layout"]
sdl2 = ["dep:kryon-sdl2", "dep:kryon-runtime", "dep:kryon-render", "dep:kryon-layout"]
html-server = ["dep:glam", "dep:tokio", "dep:warp", "dep:uuid", "dep:serde", "dep:serde_json", "dep:kryon-html", "kryon-html/server", "dep:kryon-runtime", "dep:kryon-render", "dep:kryon-layout"]

[[bin]]
name = "kryon"
path = "src/main.rs"

[[bin]]
name = "kryon-renderer-raylib"
path = "src/bin/kryon-renderer-raylib.rs"
required-features = ["raylib"]

[[bin]]
name = "kryon-renderer-ratatui"
path = "src/bin/kryon-renderer-ratatui.rs"
required-features = ["ratatui"]

[[bin]]
name = "kryon-renderer-wgpu"
path = "src/bin/kryon-renderer-wgpu.rs"
required-features = ["wgpu"]

[[bin]]
name = "kryon-renderer-sdl2"
path = "src/bin/kryon-renderer-sdl2.rs"
required-features = ["sdl2"]

[[bin]]
name = "kryon-renderer-debug"
path = "src/bin/kryon-renderer-debug.rs"

[[bin]]
name = "kryon-renderer-html"
path = "src/bin/kryon-renderer-html.rs"
required-features = ["html-server"]

[[bin]]
name = "kryon-web-examples"
path = "src/bin/kryon-web-examples.rs"
required-features = ["html-server"]

[[bin]]
name = "kryon-debug-interactive"
path = "src/bin/kryon-debug-interactive.rs"
required-features = ["ratatui"]

[[bin]]
name = "kryon-standalone"
path = "src/bin/kryon-standalone.rs"
required-features = ["ratatui"]
